%% GENERATED by service-conventions/regen-er (mermerd 0.13.0) from src/main/resources/db/migration/
%% Do not edit by hand — CI fails on drift. Regenerate: sh service-conventions/regen-er
erDiagram
    connection {
        text apaleo_account 
        timestamp_with_time_zone created_at 
        bigint duplicates 
        bigint errors 
        bigint flagged_for_review 
        text id PK 
        timestamp_with_time_zone last_activity_at 
        jsonb property_ids 
        bigint records_submitted 
        text tenant_label 
        bigint versions_submitted 
        text webhook_secret_hash 
    }

    held_guest_id {
        text connection_id PK,FK 
        jsonb current_guest_ids 
        uuid guest_id 
        text object_id PK 
        text object_type PK 
        integer position PK 
        timestamp_with_time_zone refreshed_at 
        text resolution_status 
        text role PK 
        uuid source_record_id 
    }

    object_state {
        text booking_id 
        text connection_id PK,FK 
        timestamp_with_time_zone last_modified 
        text last_status 
        timestamp_with_time_zone last_submitted_at 
        text object_id PK 
        text object_type PK 
        text property_id 
        text roster_hash 
    }

    processed_event {
        integer attempts 
        text connection_id PK,FK 
        text event_id PK 
        text event_type 
        text last_error 
        timestamp_with_time_zone next_attempt_at 
        text object_id 
        text object_type 
        text property_id 
        timestamp_with_time_zone received_at 
        text state 
    }

    sync_point {
        text connection_id PK,FK 
        timestamp_with_time_zone last_full_sync_at 
        timestamp_with_time_zone last_reconcile_at 
        timestamp_with_time_zone modified_through 
        text property_id PK 
    }

    sync_run {
        text connection_id FK 
        integer duplicates 
        integer errors 
        timestamp_with_time_zone finished_at 
        integer flagged_for_review 
        uuid id PK 
        text kind 
        text last_error 
        text outcome 
        integer records_submitted 
        integer reservations_seen 
        timestamp_with_time_zone started_at 
        integer versions_submitted 
    }

    held_guest_id }o--|| connection : "connection_id"
    object_state }o--|| connection : "connection_id"
    processed_event }o--|| connection : "connection_id"
    sync_point }o--|| connection : "connection_id"
    sync_run }o--|| connection : "connection_id"
